[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/enemies sprites/bomber goblin/bomber_goblin_attack_anim_strip_6.png" type="Texture" id=2]
[ext_resource path="res://Enemies/GoblinBomber.gd" type="Script" id=3]
[ext_resource path="res://Assets/enemies sprites/bomber goblin/bomber_goblin_hit_anim_strip_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/enemies sprites/bomber goblin/bomber_goblin_idle_anim_strip_4.png" type="Texture" id=5]
[ext_resource path="res://Assets/enemies sprites/bomber goblin/bomber_goblin_death_anim_strip_6.png" type="Texture" id=6]
[ext_resource path="res://Environment/Bomb.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_bomb"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 8 )

[node name="GoblinBomber" instance=ExtResource( 1 )]
script = ExtResource( 3 )
bombScene = ExtResource( 7 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 2, 0 )
texture = ExtResource( 2 )
hframes = 6
frame = 3

[node name="AnimationPlayer" parent="." index="1"]
anims/Attack = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/Hit = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="Collisor" parent="." index="2"]
position = Vector2( 0, 0 )
shape = SubResource( 5 )

[node name="Collisor" parent="Hurtbox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 6 )

[node name="Collisor" parent="Hitbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="BombColdown" type="Timer" parent="." index="5"]
wait_time = 3.0
one_shot = true

[node name="BombSpawnPosition" type="Position2D" parent="Senses" index="0"]
position = Vector2( -2, -4 )

[node name="FrontFloor" parent="Senses" index="1"]
position = Vector2( 1, 8 )

[node name="RearFloor" parent="Senses" index="2"]
position = Vector2( -6, 8 )

[node name="PlayerSense" type="Area2D" parent="Senses" index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Senses/PlayerSense" index="0"]
position = Vector2( 48, 0 )
shape = SubResource( 8 )

[node name="BackSense" type="Area2D" parent="Senses" index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Senses/BackSense" index="0"]
position = Vector2( -24, 0 )
shape = SubResource( 9 )

[connection signal="body_entered" from="Senses/PlayerSense" to="." method="_on_PlayerSense_body_entered"]
[connection signal="body_exited" from="Senses/PlayerSense" to="." method="_on_PlayerSense_body_exited"]
[connection signal="body_entered" from="Senses/BackSense" to="." method="_on_BackSense_body_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
